# ktls

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  flake.nix  rust-toolchain.toml
.github/: FUNDING.yml
.github/workflows/: release-plz.yaml  test.yml
ktls/: CHANGELOG.md  Cargo.toml  README.md
ktls-sys/: CHANGELOG.md  Cargo.toml  Justfile  README.md  tls.h
ktls/src/: async_read_ready.rs  cork_stream.rs  ffi.rs  ktls_stream.rs
src/: bindings.rs  cork_stream.rs  ffi.rs  ktls_stream.rs  lib.rs
src/ktls_stream/: mod.rs
tests/: integration_test.rs  rustls_test.rs
