[package]
name = "ktls"
version = "5.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hapsoc/ktls"
documentation = "https://docs.rs/ktls"
readme = "README.md"
description = """
Configures kTLS for tokio-rustls client and server connections.
"""

[dependencies]
libc = { version = "0.2.153", features = ["const-extern-fn"] }
thiserror = "1.0.57"
tracing = "0.1.40"
tokio-rustls = { git = "https://github.com/rustls/tokio-rustls", rev = "d26502cf444ab2fa24a6d6fe08933abd4a2e8f3e" }
rustls = { version = "0.23.1", default-features = false }
smallvec = "1.13.1"
memoffset = "0.9.0"
pin-project-lite = "0.2.13"
tokio = { version = "1.36.0", features = ["net", "macros", "io-util"] }
futures = "0.3.30"
ktls-sys = "1.0.0"
ktls-recvmsg = { version = "0.1.3" }
num_enum = "0.7.2"

[dev-dependencies]
lazy_static = "1.4.0"
oorandom = "11.1.3"
rcgen = "0.12.1"
socket2 = "0.5.6"
test-case = "3.3.1"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
default = ["aws_lc_rs", "tls12"]
aws_lc_rs = ["rustls/aws_lc_rs"]
ring = ["rustls/ring"]
tls12 = ["rustls/tls12"]
