[package]
name = "ktls"
version = "5.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hapsoc/ktls"
documentation = "https://docs.rs/ktls"
readme = "README.md"
description = """
Configures kTLS for tokio-rustls client and server connections.
"""

[dependencies]
libc = { version = "0.2.153", features = ["const-extern-fn"] }
thiserror = "1.0.58"
tracing = "0.1.40"
# main branch
tokio-rustls = { git = "https://github.com/rustls/tokio-rustls", rev = "caf4e8267f0e708a2bfc561dec98a842dc960ba6", default-features = false }
rustls = { version = "0.23.2", default-features = false }
smallvec = "1.13.1"
memoffset = "0.9.0"
pin-project-lite = "0.2.13"
tokio = { version = "1.36.0", features = ["net", "macros", "io-util"] }
ktls-sys = "1.0.1"
ktls-recvmsg = { version = "0.1.3" }
num_enum = "0.7.2"
futures-util = "0.3.30"

[dev-dependencies]
lazy_static = "1.4.0"
oorandom = "11.1.3"
rcgen = "0.12.1"
socket2 = "0.5.6"
test-case = "3.3.1"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
default = ["aws_lc_rs", "tls12"]
aws_lc_rs = ["rustls/aws_lc_rs", "tokio-rustls/aws_lc_rs"]
aws-lc-rs = ["aws_lc_rs"] # Alias because Cargo features commonly use `-`
ring = ["rustls/ring", "tokio-rustls/ring"]
tls12 = ["rustls/tls12", "tokio-rustls/tls12"]
