[package]
name = "ktls"
version = "6.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustls/ktls"
documentation = "https://docs.rs/ktls"
authors = ["Amos Wenger <amos@bearcove.net>"]
readme = "README.md"
description = """
Configures kTLS for tokio-rustls client and server connections.
"""
rust-version = "1.75"

[dependencies]
libc = { version = "0.2.155", features = ["const-extern-fn"] }
thiserror = "1.0.63"
tracing = "0.1.40"
tokio-rustls = { default-features = false, version = "0.26.0" }
rustls = { version = "0.23.12", default-features = false }
smallvec = "1.13.2"
memoffset = "0.9.1"
pin-project-lite = "0.2.14"
tokio = { version = "1.39.2", features = ["net", "macros", "io-util"] }
ktls-sys = "1.0.1"
num_enum = "0.7.3"
futures-util = "0.3.30"
nix = { version = "0.29.0", features = ["socket", "uio", "net"] }

[dev-dependencies]
lazy_static = "1.5.0"
oorandom = "11.1.4"
rcgen = "0.13.1"
socket2 = "0.5.7"
test-case = "3.3.1"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
default = ["aws_lc_rs", "tls12"]
aws_lc_rs = ["rustls/aws_lc_rs", "tokio-rustls/aws_lc_rs"]
aws-lc-rs = ["aws_lc_rs"]                                  # Alias because Cargo features commonly use `-`
ring = ["rustls/ring", "tokio-rustls/ring"]
tls12 = ["rustls/tls12", "tokio-rustls/tls12"]
